<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Back to Question</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="question_fragment_label">Quiz</string>
    <string name="cheat_fragment_label">Cheat</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="im_ashamed">I\'m ashamed</string>
    <string name="confront_fragment_label">Not OK</string>
    <string name="confrontation_string">Really? You\'re gonna try to get points for that?!</string>
    <string name="true_or_false">Is the below statement true or false?</string>
    <string name="cheat">Cheat</string>
    <string name="_false">False</string>
    <string name="_true">True</string>
    <string name="loading">Loading</string>
    <string name="angry_grandma">Angry Grandma</string>
    <string name="game_over">Game over</string>
    <string name="new_game">New Game</string>
</resources>