<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/QuestionFragment">

    <fragment
        android:id="@+id/QuestionFragment"
        android:name="com.example.geoquiz.fragments.QuestionFragment"
        android:label="@string/question_fragment_label"
        tools:layout="@layout/question_fragment">

        <action
            android:id="@+id/action_QuestionFragment_to_CheatFragment"
            app:destination="@id/CheatFragment" />
        <action
            android:id="@+id/action_QuestionFragment_to_confrontFragment"
            app:destination="@+id/ConfrontFragment"/>
    </fragment>
    <fragment
        android:id="@+id/CheatFragment"
        android:name="com.example.geoquiz.fragments.CheatFragment"
        android:label="@string/cheat_fragment_label"
        tools:layout="@layout/cheat_fragment">

        <action
            android:id="@+id/action_CheatFragment_to_QuizFragment"
            app:destination="@id/QuestionFragment" />
    </fragment>
    <fragment
        android:id="@+id/ConfrontFragment"
        android:name="com.example.geoquiz.fragments.ConfrontFragment"
        android:label="@string/confront_fragment_label"
        tools:layout="@layout/confront_fragment">
        <action
            android:id="@+id/action_ConfrontFragment_to_QuestionFragment"
            app:destination="@id/QuestionFragment"/>
    </fragment>
</navigation>